--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,14 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended",
-    "github>motabilityoperations/renovate-config:autoMergeNonMajorUpdates",
-    "github>motabilityoperations/renovate-config:noPrCreationLimit"
+  "extends": ["config:recommended"],
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
+    },
+    {
+      "prHourlyLimit": 0,
+      "prConcurrentLimit": 0
+    }
   ]
 }
